--- a/src/Aw/Frontend/TemplateBundle/Resources/views/base.html.twig
+++ b/src/Aw/Frontend/TemplateBundle/Resources/views/base.html.twig
@@ -22,12 +22,13 @@
         <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts %}
     <![endif]-->
-
     <link rel="shortcut icon" href="images/ico/favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+    {% block custom_stylesheets %}
+    {% endblock custom_stylesheets %}
 </head><!--/head-->
 
 <body>
@@ -288,5 +289,8 @@
 <script src="js/price-range.js"></script>
 <script src="{{ asset('bundles/awfrontendtemplate/prettyPhoto/js/jquery.prettyPhoto.js') }}"></script>
 <script src="js/main.js"></script>
+
+{% block customscript %}
+{% endblock %}
 </body>
 </html>
