--- a/src/Aw/Backend/TemplateBundle/Resources/views/base.html.twig
+++ b/src/Aw/Backend/TemplateBundle/Resources/views/base.html.twig
@@ -368,8 +368,9 @@
                         <i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="pages/charts/chartjs.html"><i class="fa fa-circle-o"></i> Paypal</a></li>
-                        <li><a href="pages/charts/morris.html"><i class="fa fa-circle-o"></i> Efectivo</a></li>
+                        {% for paymentMethod in paymentMethods%}
+                            <li><a href="pages/charts/chartjs.html"><i class="fa fa-circle-o"></i> {{ paymentMethod.name }}</a></li>
+                        {% endfor %}
                     </ul>
                 </li>
                 <li class="treeview">
