--- a/src/Aw/Backend/TemplateBundle/Resources/views/Paymentmethod/new.html.twig
+++ b/src/Aw/Backend/TemplateBundle/Resources/views/Paymentmethod/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'AwBackendTemplateBundle::base.html.twig' %}
 
-{% block content_title %}{% trans %}Nuevo Plan de Hosting{% endtrans %}{% endblock content_title %}
+{% block content_title %}{% trans %}Nuevo Plan de Pago{% endtrans %}{% endblock content_title %}
 
 {% block flasherror %}
     {% if formuser.errors(true).count > 0 %}
