payment method default

--- a/src/Aw/Frontend/TemplateBundle/Resources/views/Cart/index.html.twig
+++ b/src/Aw/Frontend/TemplateBundle/Resources/views/Cart/index.html.twig
@@ -106,7 +106,7 @@
                     <tbody>
                     <tr>
                         <td class="cart_product_table">
-                            {{ form_widget(form.payment) }}
+                            {{ form_widget(form.paymentmethod) }}
                         </td>
                         <td><span class="currency">Total a pagar:  $</span><span id="total_to_pay">0</span></td>
                     </tr>
