--- a/src/Aw/Backend/TemplateBundle/Resources/views/Paymentmethod/index.html.twig
+++ b/src/Aw/Backend/TemplateBundle/Resources/views/Paymentmethod/index.html.twig
@@ -14,6 +14,7 @@
                         <tr>
                             <th>Id</th>
                             <th>Nombre</th>
+                            <th>Módulo</th>
                             <th>Habilitado</th>
                             <th>Acciones</th>
                         </tr>
@@ -23,6 +24,7 @@
                         <tr>
                             <td>{{ paymentmethod.id }}</td>
                             <td>{{ paymentmethod.name }}</td>
+                            <td>{{ paymentmethod.module }}</td>
                             <td>{{ paymentmethod.enable }}</td>
                             <td>
                                 <form action="{{ path('paymentmethod_edit', { 'id': paymentmethod.id }) }}" method="get">
